# retriever-fastapi-example

./: .dockerignore  Dockerfile  config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
model/: scifact_xgb_es+vs+rr_n.json
retriever/: api.py  config.yaml
